# routes/api.php
@@ -23,21 +23,15 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 // GET /mariama/v1/comptes?page=1&limit=10&type=epargne&statut=actif&search=...&sort=dateCreation&order=desc
 // Récupérer un compte spécifique (Admin/Client)
 // GET /mariama/v1/comptes/{compteId}
-Route::middleware('rating:10')->group(function(){
+Route::middleware(['rating:10', 'logging'])->group(function(){
         Route::prefix(config('balde.mariama') . '/v1')->group(function() {
         Route::get('comptes', [CompteController::class, 'index']);
         Route::get('comptes/archived', [CompteController::class, 'archived']);
         Route::get('comptes/{compte}', [CompteController::class, 'show']);
         Route::post('comptes', [CompteController::class, 'store']);
+        Route::delete('comptes/{compte}', [CompteController::class, 'destroy']);
         });
 });
-
-// Swagger documentation route
-Route::get('/docs', function () {
-    return view('vendor.l5-swagger.index');
-});
-
-
 
 // Swagger documentation route
 Route::get('/docs', function () {
